--- a/activation_function.ipynb
+++ b/activation_function.ipynb
@@ -26,12 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "\n",
+    "# Mathematically, Sigmoid is defined as\n",
+    "# f (x) = 1 / (1 + exp(-x))\n",
     "\n",
     "sigmoid = nn.Sigmoid()\n",
     "x = torch.tensor([0.0, 1.0, -1.0], requires_grad=True)\n",
@@ -55,6 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Mathematically, tanh is defined as:\n",
+    "# f(x) = (exp(x) - exp(-x)) / (exp(x) + exp(-x))\n",
+    "\n",
     "tanh = nn.Tanh()\n",
     "x = torch.tensor([0.0, 1.0, -1.0], requires_grad=True)\n",
     "output = tanh(x)"
@@ -78,6 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Mathematically, ReLU is defined as:\n",
+    "# f(x) = max(0, x)\n",
+    "\n",
     "relu = nn.ReLU()\n",
     "x = torch.tensor([0.0, 1.0, -1.0], requires_grad=True)\n",
     "output = relu(x)"
@@ -130,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Exponential Linear Unit (ELU) Activation Function:\n",
+    "### 6. Exponential Linear Unit (ELU) Activation Function:\n",
     "\n",
     "* Range: (-α, ∞) where α is a positive constant.\n",
     "* Similar to ReLU but smooth for negative values.\n",
@@ -169,6 +178,30 @@
     "\n",
     "x = torch.tensor([0.0, 1.0, -1.0], requires_grad=True)\n",
     "output = swish(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Softmax\n",
+    "\n",
+    "* The softmax activation is commonly used in the output layer for multiclass classification problems. \n",
+    "* It converts a vector of real numbers into a probability distribution over multiple classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mathematically Softmax is defined as\n",
+    "# softmax(x)_i = exp(x_i) / sum(exp(x_j) for j in range(N))\n",
+    "\n",
+    "softmax = nn.Softmax(dim=0)\n",
+    "x = torch.tensor([0.0, 1.0, -1.0], requires_grad=True)\n",
+    "output = softmax(x)"
    ]
   }
  ],
